# kernels

./: cachyos-kernels-guia.md  prueba.sh
gtk_prueba/: README.md  main.c  meson.build  meson_options.txt
